# controle-de-gastos

./: CHANGELOG.md  LICENSE  README.md  controle-de-gastos.cabal
app/: Main.hs
